@@ -6,13 +6,13 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
     //doc con dokka
-    id "org.jetbrains.dokka" version "1.9.20"
+    id 'jacoco'
     //serialization
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.23'
 }
 
-group ''
-version ''
+group 'org.example'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -40,18 +40,7 @@ javafx {
     version = '21'
     modules = ['javafx.controls', 'javafx.fxml']
 }
-configurations.all {
-    resolutionStrategy {
-        force 'org.jetbrains.kotlin:kotlin-stdlib:1.9.23'
-        force 'org.jetbrains.kotlin:kotlin-stdlib-common:1.9.23'
-        force 'org.jetbrains.kotlin:kotlin-reflect:1.9.23'
-    }
-    resolutionStrategy.eachDependency { details ->
-        if (details.requested.group == 'org.jetbrains.kotlinx' && details.requested.name.startsWith('kotlinx-serialization')) {
-            details.useVersion '1.8.0'  // O la versión que uses compatible con Kotlin 1.9.23
-        }
-    }
-}
+
 
 dependencies {
     //libreria de drivers de base de datos H2
@@ -67,7 +56,8 @@ dependencies {
     implementation("org.lighthousegames:logging:1.3.0")
     implementation('ch.qos.logback:logback-classic:1.5.13')
     //implementation("io.github.pdvrieze.xmlutil:serialization-jvm:0.84.3")
-
+    implementation("io.github.pdvrieze.xmlutil:serialization-jvm:0.90.3")
+    //Json serializable
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-core:1.6.2")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2")
 
@@ -84,11 +74,26 @@ dependencies {
     //BCrypt
     implementation("org.mindrot:jbcrypt:0.4")
     // Open Brwoser
-    implementation("com.vaadin:open:8.5.0")
+    implementation("com.vaadin:open:8.5.0.4")
+    //koin
+    constraints {
+        implementation("io.insert-koin:koin-core:3.5.6")
+    }
+    implementation("io.insert-koin:koin-core")
+    testImplementation "org.jetbrains.kotlin:kotlin-test:2.1.0"
+    // Jacoco
+    implementation("org.jacoco:org.jacoco.core:0.8.12")
+    testImplementation "org.jetbrains.kotlin:kotlin-test:1.9.23"
 }
 
 test {
     useJUnitPlatform()
+    finalizedBy(tasks.jacocoTestReport)
+    /*jvmArgs(
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-reads", "org.junit.jupiter.api=kotlin.stdlib"
+    )*/
 }
 
 jlink {
@@ -110,4 +115,36 @@ jar {
         configurations["compileClasspath"].collect { it.isDirectory() ? it : zipTree(it) }
     }
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+jacocoTestReport{
+    dependsOn test
+    reports {
+        html.required=true
+        csv.required=true
+        xml.required=true
+    }
+    afterEvaluate {
+        classDirectories.setFrom (files(classDirectories.files.collect{
+                fileTree(dir: it, exclude: [
+                    "**/models/**",
+                    "**/exceptions/**",
+                    "**/*Main*.*"
+                ])
+            }))
+        }
+    }
+
+jacocoTestCoverageVerification{
+    violationRules {
+        rule {
+            limit {
+                minimum= 0.6
+            }
+        }
+    }
+}
+task testCoverage(group: 'verification', description: 'Runs the unit tests with coverage'){
+    dependsOn test,
+        jacocoTestReport,
+        jacocoTestCoverageVerification
 }
